# Passman

./: .gitignore  README.md
password-manager-electron/: index.html  main.js  package-lock.json  package.json  renderer.js  styles.css
password-manager-electron/assets/icons/: icon.icns
password_manager/: Cargo.toml
password_manager/src/: main.rs
